# ont_minimap2

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  README.md  ont_minimap2.c  ont_minimap2.h  v2.10_lseek_fix.patch  v2.10_signed-unsigned_comparison.patch
gitlab-ci/: get_mklibs.sh
import/win/lib/: build_instructions.txt  pthreadVC2.lib  pthreadVC2d.lib
lib/: README.txt
